--- a/org/2024-05-23-T480_Guix.org
+++ b/org/2024-05-23-T480_Guix.org
@@ -86,4 +86,4 @@ After this Firefox has no problems with video acceleration.
 * Conclusion
 Overall I was able to get Guix running pretty much perfectly on this hardware. While it was certainly quite far from a "just works" experience, it wasn't that complicated and I can definitely recommend giving Guix a try.
 
-[fn:1]: Substitutes are prebuilt package derivations, used to avoid compiling software locally.
+[fn:1]Substitutes are prebuilt package derivations, used to avoid compiling software locally.
